	* Update unit test framework to Catch 2.2.3.

	* Fix documentation of sanitize flags

	* Enable destructor override warning in self_test build for Clang 5.0 or later

	* Update unit test framework to Catch 2.2.1.

	* Worked around clang++-6 bugs 38010 and 38033

	* Improve support for compiler modes:
	  GCC and Clang: -std=c++17; MSVC: /std:c++17
	  GCC and Clang: -std=c++2a; MSVC: /std:c++latest

	* Fix issue #87: C4355 warning from VS Release builds.  Thanks @Neargye

	* Fix issue #69: work around C4702 warning from VS Release builds.

	* Fix issue #88: work around C2066 error from VS 2017 15.7.1.

v31 2018-05-11

	* Issue #83: Add AppVeyor support for VS 2015 and VS 2017

	* Fix issue #82: restore compilation with VS 2015.


v30 2018-04-02

	* mock_interface<T> provides a convenient short cut when implementing
	  mocks from interfaces. It is used together with the macros
	  IMPLEMENT_MOCKn(func_name) and IMPLEMENT_CONST_MOCKn(func_name).
	  The signature of the function is deduced. It is not possible to use
	  mock_interface<T> with multiple inheritance, and it is not possible
	  to mock overloads with IMPLEMENT_MOCKn(func_name) or
	  IMPLEMENT_CONST_MOCKn(func_name)

	* Used markdownlint to make documentation more consistent. Thanks @AndrewPaxie

	* Silenced 2 clang++-5 warnings about missing "override"

	Back ported Trompeloeil to C++11. Thanks @AndrewPaxie!
	Changes by file and directory:
	* Cleaned up `.travis.yml`
	* Cleaned up `CMakeLists.txt` and bumped kcov for travis builds
	* `README.md`
	  * Updated supported compiler list.
	  * Added link to `docs/Backward.md`.
	  * Added link to `docs/PlatformAndLibraries.md`.
	* `check_errors.sh` require `CXXFLAGS` with either `-std=c++11` or `-std=c++14`.
	* `docs/FAQ.md`
	  * Updated supported compilers list.
	  * Updated answer regarding C++11 support.
	* `docs/`
	  * New: "Backward compatibility with earlier versions of C++".
	  * New: "Platform and library support for Trompeloeil".
	* `compilation_errors/`