@@ -27,7 +27,12 @@ matrix:
         - wget http://releases.llvm.org/3.7.1/clang+llvm-3.7.1-x86_64-linux-gnu-ubuntu-14.04.tar.xz
         - tar -xvf clang+llvm-3.7.1-x86_64-linux-gnu-ubuntu-14.04.tar.xz
         - sudo cp -n clang+llvm-3.7.1-x86_64-linux-gnu-ubuntu-14.04/lib/clang/3.7.1/lib/linux/*.a /usr/lib/llvm-3.7/lib/clang/3.7.1/lib/linux/
-        - CXX=${COMPILER} ./check_errors.sh
+        - CXX=${COMPILER} ./check_errors.sh ||
+          {
+            FAILURES="$?" ;
+            echo "Expected zero failures from check_errors.sh, got ${FAILURES}" ;
+            exit 1 ;
+          }
         - mkdir build && cd build
         - CXX=${COMPILER} cmake -DCMAKE_BUILD_TYPE=Debug -DTRAVIS_JOB_ID='${TRAVIS_JOB_ID}' -DSANITIZE=true ..
         - make -j 4 VERBOSE=1 self_test kcov
@@ -69,7 +74,12 @@ matrix:
         - wget http://releases.llvm.org/3.9.1/clang+llvm-3.9.1-x86_64-linux-gnu-ubuntu-14.04.tar.xz
         - tar -xvf clang+llvm-3.9.1-x86_64-linux-gnu-ubuntu-14.04.tar.xz
         - sudo cp clang+llvm-3.9.1-x86_64-linux-gnu-ubuntu-14.04/lib/clang/3.9.1/lib/linux/*.a /usr/lib/llvm-3.9/lib/clang/3.9.1/lib/linux/
-        - CXX=${COMPILER} ./check_errors.sh
+        - CXX=${COMPILER} ./check_errors.sh ||
+          {
+            FAILURES="$?" ;
+            echo "Expected zero failures from check_errors.sh, got ${FAILURES}" ;
+            exit 1 ;
+          }
         - mkdir build && cd build
         - CXX=${COMPILER} cmake -DCMAKE_BUILD_TYPE=Debug -DTRAVIS_JOB_ID='${TRAVIS_JOB_ID}' -DSANITIZE=true ..
         - make -j 4 VERBOSE=1 self_test kcov
@@ -223,10 +233,18 @@ install:
 
 before_script:
   - CXX=${COMPILER} CXXFLAGS=${CXXFLAGS} ./check_errors.sh ||
-    FAILURES="$?" && if [[ ${CXX_STANDARD} == "11" && ${FAILURES} != "4" ]]; then
-      echo "Expected four failures from C++11 build, got " ${FAILURES} ;
-      exit 1 ;
-    fi
+    {
+      FAILURES="$?" ;
+      if [[ ${CXX_STANDARD} == "11" ]]; then
+        if [[ ${FAILURES} != "4" ]]; then
+          echo "Expected four failures from C++11 check_errors.sh, got ${FAILURES}" ;
+          exit 1 ;
+        fi ;
+      else
+        echo "Expected zero failures from check_errors.sh, got ${FAILURES}" ;
+        exit 1 ;
+      fi ;
+    }
   - mkdir build && cd build
   - CXX=${COMPILER} cmake -DCXX_STANDARD="${CXX_STANDARD}" -DCMAKE_BUILD_TYPE=Debug -DTRAVIS_JOB_ID='${TRAVIS_JOB_ID}' -DSANITIZE=${SANITIZE} ..
   - make VERBOSE=1 self_test
